changed resume and added vercel

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dixonzorcmpsi.github.io/React-portfolio/",
+  "homepage": ".",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
